# databricks-advanced-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  workflow.yml
infra/: INSTALL.md  deploy.ps1  main.bicep  main.parameters.json
src/databricks_advanced_mcp/: __init__.py  client.py  config.py  server.py
src/databricks_advanced_mcp/graph/: __init__.py  builder.py  cache.py  models.py
src/databricks_advanced_mcp/parsers/: __init__.py  dlt_parser.py  notebook_parser.py  sql_parser.py
src/databricks_advanced_mcp/reviewers/: __init__.py  performance.py  standards.py  suggestions.py
src/databricks_advanced_mcp/tools/: __init__.py  catalog_ops.py  compute_ops.py  dependency_scanner.py  graph_ops.py  impact_analysis.py  job_pipeline_ops.py  notebook_reviewer.py  sql_executor.py  table_info.py  volume_ops.py  warehouse_ops.py  workspace_listing.py  workspace_ops.py
tests/: conftest.py  test_graph.py  test_impact_analysis.py  test_new_tools.py  test_notebook_parser.py  test_reviewers.py  test_spec_compliance.py  test_sql_parser.py  test_tools_integration.py  test_workspace_listing.py  test_workspace_ops.py  test_workspace_ops_live.py
